# assessment_recommondation

./: README.md  ass.json  assessment.json  chroma.sqlite3  index_metadata.pickle  pyproject.toml  rag.py  recommendation_history.json  requirements.txt  server.py  streamlit_app.py  test.py  test_queries.json
