[project]
name = "assessment-recommandations1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "google-generativeai>=0.8.5",
    "langchain>=1.0.4",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "rich>=14.2.0",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
]
